# src/routes/index.route.js
@@ -2,11 +2,13 @@ import { Router } from "express";
 import productRoute  from "./product.route.js";
 import categoryRoute  from "./category.route.js";
 import authRoute  from "./auth.route.js";
+import wishlistRoute from "./wishlist.route.js";
 const routes = Router();
 
 routes.use("/products", productRoute)
 routes.use("/categories", categoryRoute)
 routes.use("/auth", authRoute)
+routes.use("/wishlist", wishlistRoute);
 // routes.use("/products", hanldeProduct...)
 // routes.use("/products", hanldeProduct...)
 // routes.use("/products", hanldeProduct...)
